--- a/metadata.yaml
+++ b/metadata.yaml
@@ -25,6 +25,7 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcsh 'Cooking, American'
 - !lcc 'TX'
+- GITenberg
 title: "Good Things to Eat, as Suggested by Rufus\r\nA Collection of Practical Recipes\
   \ for Preparing Meats, Game, Fowl, Fish, Puddings, Pastries, Etc."
 url: http://www.gutenberg.org/ebooks/18435
